--- a/empty-service/package.json
+++ b/empty-service/package.json
@@ -1,21 +1,16 @@
 {
-  "name": "user-service",
+  "name": "empty-service",
   "version": "1.0.0",
-  "description": "User APIs",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "tsc -w & node dist/index.js"
+    "dev": "tsc & node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.17",
     "typescript": "^5.0.3"
-  },
-  "dependencies": {
-    "axios": "^1.3.5",
-    "express": "^4.18.2"
   }
 }
