--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "user-service",
+  "name": "payment-service",
   "version": "1.0.0",
   "description": "User APIs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "tsc -w & node dist/index.js"
+    "dev": "tsc & node dist/index.js"
   },
   "author": "",
   "license": "ISC",
