--- a/user-service/package.json
+++ b/user-service/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "tsc -w & node dist/index.js"
+    "dev": "tsc & node dist/index.js"
   },
   "author": "",
   "license": "ISC",
