--- a/order-service/package.json
+++ b/order-service/package.json
@@ -2,7 +2,7 @@
   "name": "order-service",
   "version": "1.0.0",
   "description": "User APIs",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
