--- a/k8s/wrapper-service-deployment.yaml
+++ b/k8s/wrapper-service-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: wrapper-service
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: wrapper-service
@@ -14,6 +14,8 @@ spec:
     spec:
       containers:
       - name: wrapper-service
-        image: <YOUR_DOCKERHUB_USERNAME>/wrapper-service:latest
+        image: 988772184836.dkr.ecr.ap-south-1.amazonaws.com/issue-finder:wrapper-service-9
         ports:
-        - containerPort: 3000
+        - containerPort: 3003
+      imagePullSecrets:
+      - name: cr-credentials
