--- a/k8s/order-service-k8s-service.yaml
+++ b/k8s/order-service-k8s-service.yaml
@@ -8,5 +8,6 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3000
-  type: ClusterIP
+      targetPort: 3002
+      nodePort: 32389
+  type: NodePort
