--- a/k8s/wrapper-service-k8s-service.yaml
+++ b/k8s/wrapper-service-k8s-service.yaml
@@ -8,5 +8,6 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 3000
-  type: LoadBalancer
+      targetPort: 3003
+      nodePort: 32392
+  type: NodePort
